--- a/words/_config.yml
+++ b/words/_config.yml
@@ -1,14 +1,12 @@
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
+title: Cinjon
+email: cinjon@alum.mit.edu
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+  Cinjon's on the internet
+baseurl: "/words/" # the subpath of your site, e.g. /blog/
+url: "http://cinjon.com" # the base hostname & protocol for your site
+# twitter_username: jekyllrb
+github_username:  cinjon
 
 # Build settings
 markdown: kramdown
