--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Cinjon
 email: cinjon@alum.mit.edu
 description: > # this means to ignore newlines until "baseurl:"
   Cinjon's on the internet
-baseurl: "/words/" # the subpath of your site, e.g. /blog/
+baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://cinjon.com" # the base hostname & protocol for your site
 # twitter_username: jekyllrb
 github_username:  cinjon
